Fixed Link Color On Mobile Search Result

--- a/kitsune/sumo/static/sumo/less/mobile/search.less
+++ b/kitsune/sumo/static/sumo/less/mobile/search.less
@@ -104,7 +104,7 @@
         }
 
         > a {
-          color: #fff;
+          color: #0A84FF;
           display: block;
           line-height: 24px;
         }
